# raytracer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
CMake/: FindOptiX.cmake
cmake/: FindOptiX.cmake  configure_optix.cmake
shaders/: main.frag  main.vert  triangle.vert
src/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Environment.hpp  LaunchParams.hpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Program.cpp  Program.hpp  Quad.cpp  Quad.hpp  Renderer.cpp  Renderer.hpp  SampleRenderer.cpp  SampleRenderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  debug.hpp  main.cpp  main.cu  raytracer.cpp  raytracer.cu  raytracer.h
src/utils/: CUDABuffer.hpp  PTXCode.hpp
support/: CMakeLists.txt
sutil/: Aabb.h  BufferView.h  CMakeLists.txt  CUDAOutputBuffer.h  Camera.cpp  Camera.h  CuBuffer.h  Exception.h  GLDisplay.cpp  GLDisplay.h  GeometryData.h  Light.h  LocalGeometry.h  LocalShading.h  Matrix.h  Quaternion.h  Scene.cpp  Scene.h  Trackball.cpp  Trackball.h  WorkDistribution.h  curve.h  helpers.h  sphere.cu  sutil.cpp  vec_math.h  whitted.cu  whitted.h  whitted_cuda.h
